allprojects {
    apply plugin: 'maven-publish'
    apply plugin: 'java'
    apply plugin: 'java-library'

    group = 'com.touchbiz.starter'
    version = '1.0'

    buildscript {
        ext {
            commonLang3Version = '3.10'
            aspectjVersion = 'deploy.sh.5'
            springBootVersion = '2.7.0'
            springVersion = '5.3.20'
            springCloudVersion = '3.1.2'
            mavenUserName = '61402da4c364e0737d2e4d14'
            mavenPassword = 'Gl9SYH4Xz]OB'

            lombokVersion = '1.18.24'
            nacosStarterVersion = '2021.1'
            swaggerVersion = '3.0.0'
            swaggerLayerVersion = '1.1.3'
            commonEntityVersion = '2023.2.16.1'
            commonVersion = '2023.2.16.1'
            commonPoolVersion = '1.6'
            mybatisVersion = '3.0.1'
            druidVersion = '1.2.11'
            mybatisplusVersion = '3.5.3.1'
            dynamicVersion = '3.5.2'
            tkVersion = '4.1.5'
            oneVersion = '1.8.6.Final'
            reactorVersion = '3.4.24'
            feignVersion = "10.10.1"
            openFeignVersion = '3.1.2'
            validationVersion = '2.0.1.Final'
            mysqlVerision = '8.0.30'
            revision = '2023.2.16.2'
            jacksonVersion = '2.11.1'
            servletVersion = '4.0.1'
            repositoryUrl = 'https://packages.aliyun.com/maven/repository/2137731-release-WXgfEj'
        }
        repositories {
            mavenCentral()
        }

    }


}


/**所有子项目应用Java插件*/

subprojects {

    sourceCompatibility = '17'
    group = 'com.touchbiz.starter'
    version = "${ revision }"

    repositories {
        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
        maven {
            credentials {
                username "$mavenUserName"
                password "$mavenPassword"
            }
            url 'https://packages.aliyun.com/maven/repository/2137731-release-WXgfEj/'
        }
    }


    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    //打包源代码
    task sourcesJar(type: Jar, dependsOn: classes) {
        classifier = 'sources'
        from sourceSets.main.allSource
    }

    configurations.all {
        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
        exclude group: "io.undertow", module: "undertow-websockets-jsr"
        exclude group: "io.springfox", module:"springfox-swagger-ui"
    }

    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

    artifacts {
        archives sourcesJar
    }

    dependencies {
        compileOnly group: 'org.projectlombok', name: 'lombok', version: "${ lombokVersion }"
        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${ lombokVersion }"
    }


    apply plugin: 'maven-publish'

    publishing {
        publications {
            maven(MavenPublication) {
                groupId = "$project.group"
                artifactId = "$artifactId"
                version = "$project.version"
                from components.java
            }
        }
        repositories {
            maven {
                //认证用户和密码
                credentials{
                    username = "$mavenUserName"
                    password = "$mavenPassword"
                }
                //指定要上传的maven私服仓库
                url "$repositoryUrl"
            }
        }
    }
}